# square-word-solver

./: .gitignore  Cargo.toml  README.md  all_words.txt  big_o.bash  find_words.rs  hello.txt  info.txt  new_words.txt  notes.md  output.csv  rust-toolchain.toml  solutions.txt  words.txt
proptest-regressions/finder/: double_sided.txt  new_double_sided.txt
proptest-regressions/my_test/: proptesting.txt
src/: builder.rs  double_sided.rs  finder.rs  first_guess.rs  lib.rs  main.rs  solver.rs  top_down_finder.rs  trivial_finder.rs
src/finder/: double_sided.rs  mod.rs  new_double_sided.rs  top_down_finder.rs
src/my_test/: proptesting.rs
