[package]
name = "square-word"
version = "0.1.0"
edition = "2021"

[features]
default = []
multi-thread = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
num_cpus = "1.0"
ascii = "1.1.0"
itertools = "0.10.5"
rayon = "1.6.1"

[dev-dependencies]
const-str = "0.5.5"
pretty_assertions = "1.3.0"
proptest = "1.2.0"

[profile.release]
debug = true
